--- a/styles/home.css
+++ b/styles/home.css
@@ -16,41 +16,82 @@
 
 body {
     margin: 0;
-    background-color: gray;
+    background-image: url("/assets/general/background.png");
+    background-repeat: no-repeat;
+    background-color: rgba(59, 58, 58, 0.65);
+    background-blend-mode: color-burn;
+    background-size: cover;
 }
 
 #introduction{
-    font-family: GoldBold, Arial, sans-serif;
-    font-size: 38px;
+  font-family: GoldBold, Arial, sans-serif;
+  font-size: 38px;
+  color: rgb(225, 225, 225);
 }
 
 .navigation{
     overflow: hidden;
-    background-color: darkgrey;
+    background-color: rgb(0, 29, 41);
     margin: 0px;
 }
 
 .navigation a {
   float: left;
-  color: #f2f2f2;
+  color: rgb(225, 225, 225);
   text-align: center;
-  padding: 14px 16px;
+  padding: 20px 25px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 .navigation a:hover {
-  background-color: #ddd;
+  background-color: rgb(61, 92, 103);
   color: black;
 }
 
-/* Create a right-aligned (split) link inside the navigation bar */
-.navigation a.split {
-  float: right;
-  background-color: #04AA6D;
-  color: white;
+.aboutWebsite {
+  position: fixed;
+  scale: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 100ms ease-out;
+  background-image: repeating-linear-gradient(to left, rgb(255, 196, 0), rgb(255, 213, 5));
+  z-index: 10;
 }
 
-.webInfo {
-    
+.aboutWebsite.active {
+  scale: 1;
+}
+
+.aboutWebsite h1{
+  margin: 0px;
+  text-align: center;
+  padding: 5px, 5px;
+}
+.aboutWebsite p{
+  text-align: center;
+  padding: 20px 25px;
+  font-size: 18px;
+}
+
+.aboutWebsite ul{
+  font-size: 18px;
+}
+
+.overlay {
+  position: fixed;
+  transition: 100ms ease-out;
+  opacity: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(38, 38, 38);
+  pointer-events: none;
+}
+
+.overlay.active {
+  opacity: 0.5;
+  pointer-events: all;
 }
