--- a/styles/contact.css
+++ b/styles/contact.css
@@ -28,6 +28,7 @@ body {
   overflow: hidden;
   background-color: rgb(0, 29, 41);
   margin: 0px;
+  width: 100%;
 }
 
 .navigation a {
@@ -37,6 +38,7 @@ body {
   padding: 20px 25px;
   text-decoration: none;
   font-size: 20px;
+  font-family: GoldBold, Arial, sans-serif;
 }
 
 .navigation a:hover {
@@ -116,4 +118,5 @@ footer {
   text-align: center;
   color: white;
   background-color: rgb(0, 29, 41);
+  font-family: Aldritch, Arial, sans-serif;
 }
