--- a/styles/home.css
+++ b/styles/home.css
@@ -33,7 +33,7 @@ body {
 
 #aboutMe{
   font-family: Aldritch, Arial, sans-serif;
-  font-size: 25px;
+  font-size: 30px;
   color: rgb(225, 225, 225);
   margin: 0.75%;
 }
@@ -50,6 +50,7 @@ body {
   overflow: hidden;
   background-color: rgb(0, 29, 41);
   margin: 0px;
+  width: 100%;
 }
 
 .navigation a {
@@ -59,6 +60,7 @@ body {
   padding: 20px 25px;
   text-decoration: none;
   font-size: 20px;
+  font-family: GoldBold, Arial, sans-serif;
 }
 
 .navigation a:hover {
@@ -137,4 +139,5 @@ footer {
   text-align: center;
   color: white;
   background-color: rgb(0, 29, 41);
+  font-family: Aldritch, Arial, sans-serif;
 }
