--- a/styles/resume.css
+++ b/styles/resume.css
@@ -16,7 +16,7 @@
 
 body {
   margin: 0;
-  background-image: url("./assets/general/background.png");
+  background-image: url("../assets/general/background.png");
   background-repeat: no-repeat;
   background-color: rgba(59, 58, 58, 0.65);
   background-blend-mode: color-burn;    
@@ -24,10 +24,18 @@ body {
   background-size: cover;
 }
 
+.intro {
+  font-family: GoldBold, Arial, sans-serif;
+  color: rgb(225, 225, 225);
+  margin: 0.75%;
+  font-size: 30px;
+}
+
 .navigation{
   overflow: hidden;
   background-color: rgb(0, 29, 41);
   margin: 0px;
+  width: 100%;
 }
 
 .navigation a {
@@ -37,6 +45,7 @@ body {
   padding: 20px 25px;
   text-decoration: none;
   font-size: 20px;
+  font-family: GoldBold, Arial, sans-serif;
 }
 
 .navigation a:hover {
@@ -49,6 +58,23 @@ body {
   color: black;
 }
 
+.resumePages {
+  position: relative;
+  display: flex;
+  text-align: center;
+}
+
+.resumeInfo1 {
+  margin-bottom: 5%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.resumeInfo2 {
+  margin-bottom: 5%;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 footer {
   position: fixed;
@@ -58,4 +84,5 @@ footer {
   text-align: center;
   color: white;
   background-color: rgb(0, 29, 41);
+  font-family: Aldritch, Arial, sans-serif;
 }
