--- a/styles/resume.css
+++ b/styles/resume.css
@@ -59,7 +59,6 @@ body {
 }
 
 .resumePages {
-  position: relative;
   display: flex;
   text-align: center;
 }
@@ -74,6 +73,34 @@ body {
   margin-bottom: 5%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.downloadLink {
+  position: relative;
+  overflow: hidden;
+  max-width: 50%; 
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5%;
+  text-align: center;
+  padding: 0.5%;
+  font-family: Aldritch, Arial, sans-serif;
+  font-size: 25px;
+  color: white;
+  background-color: rgb(0, 29, 41);
+  text-decoration: none;
+}
+
+.downloadLink a{
+  color: white;
+  text-decoration: none;
+}
+
+.downloadLink a:hover{
+  color: black;
+  background-color: rgb(5, 111, 168);
+  text-decoration: none;
+
 }
 
 footer {
